--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@fastybird/vue-wamp-v1": "^0.1.5",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.4",
     "vue-material": "^1.0.0-beta-15",
+    "vue-router": "^3.5.3",
     "vue-wamp": "^3.1.6",
     "vuex": "^3.6.2"
   },
