--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fastybird/vue-wamp-v1": "^0.1.5",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.2",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.4",
     "vue-material": "^1.0.0-beta-15",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "4.5.17",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
