--- a/package.json
+++ b/package.json
@@ -3,30 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint":"eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "core-js": "^3.6.5",
+    "axios": "^1.7.3",
+    "core-js": "^3.37.0",
     "register-service-worker": "^1.7.2",
-    "vue": "^2.6.11",
-    "vue-cookies": "^1.7.4",
+    "vue": "^2.7.16",
+    "vue-cookies": "^1.8.3",
     "vue-material": "^1.0.0-beta-15",
-    "vue-router": "^3.5.3",
-    "vue-wamp": "^3.1.6",
+    "vue-router": "^3.6.5",
+    "autobahn-browser": "^22.11.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "4.5.17",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "@vitejs/plugin-vue2": "^2.3.3",
+    "vite":"^5.3.0",
+    "eslint":"^8.57.0",
+    "eslint-plugin-vue":"^9.27.0"
   },
   "eslintConfig": {
     "root": true,
@@ -34,11 +31,12 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "ecmaVersion": 2020,
+      "sourceType":"module"
     },
     "rules": {}
   },
