--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "vite build",
     "serve": "vite preview",
-    "lint":"eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@outlawdesigns/authenticationclient": "^2.0.3",
+    "autobahn-browser": "^22.11.1",
     "axios": "^1.7.3",
     "core-js": "^3.37.0",
     "register-service-worker": "^1.7.2",
@@ -16,14 +18,13 @@
     "vue-cookies": "^1.8.3",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.6.5",
-    "autobahn-browser": "^22.11.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue2": "^2.3.3",
-    "vite":"^5.3.0",
-    "eslint":"^8.57.0",
-    "eslint-plugin-vue":"^9.27.0"
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "vite": "^5.3.0"
   },
   "eslintConfig": {
     "root": true,
@@ -36,7 +37,7 @@
     ],
     "parserOptions": {
       "ecmaVersion": 2020,
-      "sourceType":"module"
+      "sourceType": "module"
     },
     "rules": {}
   },
