--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_WAMP_ROUTER_URI=wss://wamprouter.outlawdesigns.io/ws
+VITE_WAMP_ROUTER_URI=ws://localhost:8080/ws
 VITE_WAMP_ROUTER_RLM=realm1
 VITE_AUTH_DISCOVERY_URI=https://auth.outlawdesigns.io/.well-known/openid-configuration
 VITE_AUTH_CLIENT_ID=wampdashboard-vuepwa
