--- a/package.json
+++ b/package.json
@@ -14,17 +14,15 @@
     "axios": "^1.7.3",
     "core-js": "^3.37.0",
     "register-service-worker": "^1.7.2",
-    "vue": "^2.7.16",
+    "vue": "^3.5.12",
     "vue-cookies": "^1.8.3",
-    "vue-material": "^1.0.0-beta-15",
-    "vue-router": "^3.6.5",
-    "vuex": "^3.6.2"
+    "vue-router": "^4.4.5",
+    "vuetify": "^3.10.8",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue2": "^2.3.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.27.0",
-    "vite": "^5.3.0"
+    "@vitejs/plugin-vue": "^3.1.2",
+    "vite": "^3.1.8"
   },
   "eslintConfig": {
     "root": true,
